--- a/styles/web/sass/resources/atlas_resources_default/layouts/_layout-atlas-responsive.scss
+++ b/styles/web/sass/resources/atlas_resources_default/layouts/_layout-atlas-responsive.scss
@@ -70,10 +70,6 @@ $sidebar-width: 60px;
                 border-radius: 3px;
             }
 
-            .caret {
-                margin-left: 10px;
-            }
-
             &.active .glyphicon {
                 background: $brand-primary;
             }
